--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 </head>
 <body>
-    
+    <nav></nav>
+    <header></header>
+    <section></section>
+    <section></section>
+    <br><br>
+    <footer></footer>
 </body>
 </html>
