--- a/index.html
+++ b/index.html
@@ -10,11 +10,30 @@
 
 </head>
 <body>
-    <nav></nav>
-    <header></header>
-    <section></section>
-    <section></section>
+    <nav><h2>Logo</h2></nav>
+    <header><br><br><br><br><br><br><br><br><br><br><h1>Week 3: Homework Exercise</h1><p>Lets practice some Layout and positioning of Elements</p></header>
+    <section class="full">
+        <div class="col-12">This is a Full Width Column!</div>
+    </section>
+    <section class="third">
+        <h4>This is a 33.33% Layout</h4>
+        <div class="col-4">Column One</div>
+        <div class="col-4">Column Two</div>
+        <div class="col-4">Column Three</div>
+    </section>
+    <section class="forth">
+        <h4>This is a 25% Layout</h4>
+        <div class="col-3">Column One</div>
+        <div class="col-3">Column Two</div>
+        <div class="col-3">Column Three</div>
+        <div class="col-3">Column Three</div>
+    </section>
+    <section class="half">
+        <h4>This is a 50% Layout</h4>
+        <div class="col-6">Column One</div>
+        <div class="col-6">Column Two</div>
+    </section>
     <br><br>
-    <footer></footer>
+    <footer><i>This is the Footer Area...</i></footer>
 </body>
 </html>
