--- a/pagetwo.html
+++ b/pagetwo.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Three: Page One</title>
+    <title>Page 2</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 </head>
 <body>
@@ -14,34 +14,31 @@
         <div class="logo"><h2>Logo</h2></div>
         <div class="nav-con">
             <ul>
-                <a href="index.html"><li class="active">Page One</li></a>
-                <a href="pagetwo.html"><li>Page Two</li></a>
+                <a href="index.html"><li>Page One</li></a>
+                <a href="pagetwo.html"><li class="active">Page Two</li></a>
                 <li>Page Three</li>
                 <li>Page Four</li>
             </ul>
         </div>
     </nav>
-    <header><h1>Week 3: Homework Exercise</h1><p>Lets practice some Layout and positioning of Elements</p></header>
-    <section class="full">
-        <div class="col-12">This is a Full Width Column!</div>
-    </section>
+    <header><h1>This is the Second Page</h1><p>Lets practice some Layout and positioning of Elements</p></header>
     <section class="third">
         <h4>This is a 33.33% Layout</h4>
         <div class="col-4">Column One</div>
         <div class="col-4">Column Two</div>
         <div class="col-4">Column Three</div>
     </section>
+    <section class="full">
+        <h4>This is a 100% Layout</h4>
+        <div class="col-12">This is a Full Width Column!</div>
+    </section>
+    
     <section class="forth">
         <h4>This is a 25% Layout</h4>
         <div class="col-3">Column One</div>
         <div class="col-3">Column Two</div>
         <div class="col-3">Column Three</div>
         <div class="col-3">Column Three</div>
-    </section>
-    <section class="half">
-        <h4>This is a 50% Layout</h4>
-        <div class="col-6">Column One</div>
-        <div class="col-6">Column Two</div>
     </section>
     <br><br>
     <footer><i>This is the Footer Area...</i></footer>
